[tool.poetry]
name = "tamakiii-sandbox/hello-langchain"
version = "0.0.1"
description = ""
authors = ["tamakiii"]
readme = "README.md"
packages = [{include = "tamakiii_sandbox"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.137"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
